<resources>
    <string name="app_name">ACalculadora2</string>
    <string name="txt_num1">Escribe el primer número</string>
    <string name="txt_num2">Escribe el segundo número</string>
    <string name="rB_sumar">Sumar</string>
    <string name="rB_restar">Restar</string>
    <string name="rB_multiplicacion">Multiplicar</string>
    <string name="rB_division">División</string>
    <string name="B_Calcular">CALCULAR</string>
    <string name="txt_resultado">Resultado</string>

</resources>
