<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="99dp"
        android:ems="10"
        android:hint="@string/txt_num1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_num2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2">

        <RadioButton
            android:id="@+id/rB_sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rB_sumar" />

        <RadioButton
            android:id="@+id/rB_restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rB_restar" />

        <RadioButton
            android:id="@+id/rB_multiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rB_multiplicacion" />

        <RadioButton
            android:id="@+id/rB_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rB_division" />
    </RadioGroup>

    <Button
        android:id="@+id/B_Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="40dp"
        android:onClick="Calcular"
        android:text="@string/B_Calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="144dp"
        android:layout_height="38dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="35dp"
        android:text="@string/txt_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_Calcular" />
</androidx.constraintlayout.widget.ConstraintLayout>